[package]
name = "well-trained-pup"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pup"
path = "src/main.rs"

[dependencies]
ciborium = "0.2.1"
env_logger = "0.10.0"
futures-util = "0.3.28"
log = { version = "0.4.17", features = ["serde", "std"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
structstruck = "0.4.1"
tokio = { version = "1.27.0", features = ["sync", "rt", "macros", "process", "io-util", "signal"] }
tokio-stream = { version = "0.1.13", features = ["net"] }
tokio-util = { version = "0.7.8", features = ["io-util"] }


[profile.release]
lto = "fat"
codegen-units = 1
strip = "debuginfo"
#debug = true

